--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ chrono = "0.4"
 futures-util = "0.3"
 tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
 url = "2"
+base64 = "0.21"
